Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -13,12 +13,21 @@ description: "Welcome to the home of your new documentation"
   src="/images/hero-dark.png"
   alt="Hero Dark"
 />
+## Vision
 
-## Setting up
+Aeir sits at the intersection of psychology, AI, and user sovereignty. As AI grows more integral to our lives, the need for agentic representation becomes clear. Unlike centralized systems that generalize or commercialize your data, Aeir empowers you to:
 
-The first step to world-class documentation is setting up your editing environments.
+- Build a __mirrored self__ that adapts and grows
 
-<CardGroup cols={2}>
+- Participate in surveys and social research without compromising privacy
+
+- Engage in relationship discovery through __agent-to-agent interaction__
+
+## What is Aeir?
+
+Aeir is a personal AI platform that builds a "Character"—your digital twin trained on your personality, behavior, and preferences. This character can then autonomously interact on your behalf across different domains like surveys, social conversations, and matchmaking.
+
+<!-- <CardGroup cols={2}>
   <Card
     title="Edit Your Docs"
     icon="pen-to-square"
@@ -33,13 +42,23 @@ The first step to world-class documentation is setting up your editing environme
   >
     Preview your changes before you push to make sure they're perfect
   </Card>
-</CardGroup>
+</CardGroup> -->
 
-## Make it yours
+## Why Aeir?
 
-Update your docs to your brand and add valuable content for the best user conversion.
+The digital era has opened immense possibilities for self-expression and representation, yet most AI systems are designed generically and lack your voice. Aeir is an attempt to reverse that trend.
 
-<CardGroup cols={2}>
+### Motivation:
+
+- Personal AI: Everyone deserves a personal agent that truly represents them.
+
+- Autonomy with Consent: Aeir automates tasks like surveys or messaging, only where you permit.
+
+- Authenticity at Scale: Enable social interaction, insights, and matching in your authentic voice.
+
+- Data Sovereignty: Your data. Your model. Your control.
+
+<!-- <CardGroup cols={2}>
   <Card
     title="Customize Style"
     icon="palette"
@@ -68,4 +87,4 @@ Update your docs to your brand and add valuable content for the best user conver
   >
     Check out our showcase of our favorite documentation
   </Card>
-</CardGroup>
+</CardGroup> -->
